--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "backendexpressjs",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon app.js",
+    "migrate": "npx sequelize-cli db:migrate",
+    "down": "npx sequelize-cli db:migrate:undo"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +17,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment": "^2.30.1",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "sequelize-cli": "^6.6.2"
   }
 }
