--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 DB_HOST="localhost"
-DB_NAME="postgres"
+DB_NAME="AASC_v1"
 DB_USER_NAME="postgres"
-DB_PASSWORD="123456"
+DB_PASSWORD="1234"
 DB_PORT=5432
