--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=3000
 DB_HOST="localhost"
-DB_NAME="AASC_v1"
+DB_NAME="postgres"
 DB_USER_NAME="postgres"
-DB_PASSWORD="1234"
+DB_PASSWORD="123456"
 DB_PORT=5432
+TOKEN_SECRET="testSercret"
